archive/z_will_delete_script/minerva-kubernetes/dialog-config-template/customer-service-admin-api/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port-customer-service-admin-api
  namespace: dialog
spec:
  selector:
    app: deployment-customer-service-admin-api
  ports:
    - protocol: TCP
      nodePort: 31101
      port: 7007
      targetPort: 7007
  type: NodePort
